[gd_scene load_steps=22 format=3 uid="uid://dmaukoretjy2r"]

[ext_resource type="Script" path="res://tower/Tower.gd" id="1_t25bx"]
[ext_resource type="Texture2D" uid="uid://cexl0avygyym0" path="res://tower/cannon.png" id="2_viofc"]
[ext_resource type="Texture2D" uid="uid://vti1wf53qmc4" path="res://tower/tower.png" id="3_u3qti"]
[ext_resource type="Texture2D" uid="uid://socfgwvykldo" path="res://tower/Untitled52.png" id="4_3ofiw"]
[ext_resource type="Texture2D" uid="uid://d2n37byrlmlon" path="res://tower/broken_tower.png" id="4_ikwds"]
[ext_resource type="Texture2D" uid="uid://bpsag6hifava2" path="res://tower/particle_fog.png" id="5_76mjp"]
[ext_resource type="Texture2D" uid="uid://dqgj76tsa7utp" path="res://tower/Untitled52 (1).png" id="5_l662x"]
[ext_resource type="Texture2D" uid="uid://cxtotnbbadpq6" path="res://tower/Untitled52 (2).png" id="6_0rf83"]
[ext_resource type="Texture2D" uid="uid://cgtx785uw4dv4" path="res://tower/Untitled52 (3).png" id="7_m6xeb"]
[ext_resource type="Texture2D" uid="uid://cdj8q8rwq7as8" path="res://tower/Untitled52 (4).png" id="8_3kdmc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4u4l1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3ofiw")
}, {
"duration": 1.0,
"texture": ExtResource("5_l662x")
}, {
"duration": 1.0,
"texture": ExtResource("6_0rf83")
}, {
"duration": 1.0,
"texture": ExtResource("7_m6xeb")
}, {
"duration": 1.0,
"texture": ExtResource("8_3kdmc")
}],
"loop": true,
"name": &"explode",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rj55e"]
radius = 96.0

[sub_resource type="Animation" id="Animation_8n1q6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Tower:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_u3qti")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Cannon:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_viofc")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/Cannon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -43)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/AnimatedSprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/AnimatedSprite2D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_va08g"]
resource_name = "break"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Tower:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ikwds")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Cannon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 4.25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bvve6"]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ngeyi"]
resource_name = "shoot"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 0.485), Vector2(1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Tower:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_u3qti")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Cannon:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_viofc")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/Cannon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -43)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/AnimatedSprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wg728"]
_data = {
"RESET": SubResource("Animation_8n1q6"),
"break": SubResource("Animation_va08g"),
"explode": SubResource("Animation_bvve6"),
"shoot": SubResource("Animation_ngeyi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfgqi"]
size = Vector2(32, 96)

[sub_resource type="Gradient" id="Gradient_v11od"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8ta25"]
gradient = SubResource("Gradient_v11od")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_34uvd"]
particle_flag_disable_z = true
direction = Vector3(1, -1, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color_ramp = SubResource("GradientTexture1D_8ta25")

[node name="Tower2" type="Area2D"]
collision_layer = 2
script = ExtResource("1_t25bx")
range = 3
attack_gap = 0.5

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 43.0
offset_right = 1.0
offset_bottom = 44.0
metadata/_edit_use_anchors_ = true

[node name="Cannon" type="Sprite2D" parent="Control"]
position = Vector2(0, -43)
scale = Vector2(0.66, 0.66)
texture = ExtResource("2_viofc")

[node name="Tower" type="Sprite2D" parent="Control"]
position = Vector2(0, -43)
scale = Vector2(0.66, 0.66)
texture = ExtResource("3_u3qti")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]
visible = false
position = Vector2(0, -43)
sprite_frames = SubResource("SpriteFrames_4u4l1")
animation = &"explode"

[node name="Range" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rj55e")

[node name="AttackTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wg728")
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_jfgqi")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_34uvd")
texture = ExtResource("5_76mjp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
